<resources>
    <string name="app_name" translatable="false">PDM</string>
    <string name="app_3_1_title">Poupança</string>
    <string name="app_3_1_value">Valor Inicial:</string>
    <string name="app_3_1_valueEx">Valor em R$: Ex: 1700,00</string>
    <string name="app_3_1_applic">Aplicação Mensal</string>
    <string name="app_3_1_applicEx">Ex: 100,00</string>
    <string name="app_3_1_time">Tempo de Aplicação</string>
    <string name="app_3_1_timeEx">Em meses</string>
    <string name="app_3_1_tax">Taxa</string>
    <string name="app_3_1_taxEx">Ex: 0,02</string>
    <string name="app_3_1_calc">Calcular</string>
    <string name="app_3_3_title">Quiz de Trânsito</string>
    <string name="app_3_3_questNum">Questão 11 de 28</string>
    <string name="app_3_3_quest">Q11 - Qual o significado desta placa?</string>
    <string name="app_3_3_ans1">Ponte a frente</string>
    <string name="app_3_3_ans2">Estreitamento de pista</string>
    <string name="app_3_3_ans3">Declive acentuado</string>
    <string name="app_3_3_ans4">Redução de largura de veículos</string>
    <string name="app_3_3_next">Próxima pergunta</string>
    <string name="app_3_4_title" translatable="false">BalaioDeLenha</string>
    <string name="app_3_4_value">Consumo Total R$:</string>
    <string name="app_3_4_couvert">Couvert Artístico R$:</string>
    <string name="app_3_4_divide">Dividir conta por:</string>
    <string name="app_3_4_calc">Calcular conta final</string>
    <string name="app_3_4_tax">Taxa de Serviço (10%) R$:</string>
    <string name="app_3_4_finalTotal">Conta Total R$:</string>
    <string name="app_3_4_finalPerson">Valor por Pessoa R$:</string>
    <string name="app_4_contact"><u>Contato</u></string>
    <string name="aula_6" translatable="false">AULA 6 - ListView e ListActivity</string>
    <string name="aula_5" translatable="false">AULA 5 - WebApp</string>
    <string name="aula_4" translatable="false">AULA 4 - Permissões e APIs</string>
    <string name="aula_3" translatable="false">AULA 3 - Layouts Diversos</string>
    <string name="aula_2" translatable="false">AULA 2 - Conversão Cº -> Fº</string>
    <string name="aula_1" translatable="false">AULA 1 - Hello World</string>
    <string name="aula_7" translatable="false">AULA 7 - Adaptadores Customizados</string>

    <string-array name="categoria_gasto">
        <item>Alimentação</item>
        <item>Combustivel</item>
        <item>Transporte</item>
        <item>Hospedagem</item>
        <item>Outros</item>
    </string-array>
    <string name="title_activity_main7_1_adapter" translatable="false">Main7_1ActivityAdapter</string>
    <string name="adapter_de_times" translatable="false">Adapter de Times</string>
    <string name="adapter_de_cores" translatable="false">Adapter de Cores</string>
    <string name="logo" translatable="false">logo</string>
    <string name="aula_8" translatable="false">AULA 8 - Desafio Lista Dinâmica</string>
    <string name="aula_9" translatable="false">AULA 9 - Trabalho em dupla</string>
    <string name="calcular" translatable="false">Calcular</string>
    <string name="express_o" translatable="false">Expressão:</string>
    <string name="aula_10" translatable="false">AULA 10 - WebService</string>
    <string name="aula_11" translatable="false">AULA 11 - SQLite</string>
    <string name="aula_12" translatable="false">AULA 12 - Geo Voice Recorder</string>
    <string name="aula10_lista_temperatura" translatable="false">Temperatura:</string>
    <string name="aula10_lista_humidade" translatable="false">Humidade:</string>
    <string name="aula10_lista_orvalho" translatable="false">Orvalho:</string>
    <string name="aula10_lista_press_o" translatable="false">Pressão:</string>
    <string name="aula10_lista_velocidade_do_vento" translatable="false">Velocidade do vento:</string>
    <string name="aula10_lista_dire_o_do_vento" translatable="false">Direção do vento:</string>
    <string name="aula10_lista_data_hora" translatable="false">Data/hora:</string>
    <string name="aula10_mediaDefaultMessage" translatable="false">Por favor, aguarde enquanto os dados são processados...</string>
    <string name="ano" translatable="false">Ano</string>
    <string name="aula_11adicionar" translatable="false">Adicionar</string>
    <string name="aula_11buscar" translatable="false">Buscar</string>
    <string name="modelo" translatable="false">Modelo</string>
    <string name="valor" translatable="false">Valor</string>
    <string name="salvar" translatable="false">Salvar</string>
    <string name="excluir" translatable="false">Excluir</string>
    <string name="atualizar" translatable="false">Atualizar</string>
    <string name="sess_es" translatable="false">Sessões: </string>
    <string name="entrar" translatable="false">Entrar</string>
    <string name="senha" translatable="false">senha</string>
    <string name="usuario" translatable="false">usuário</string>
    <string name="_0" translatable="false">0</string>
    <string name="descri_o" translatable="false">Descrição:</string>
    <string name="id" translatable="false">Id:</string>
    <string name="title" translatable="false">Título</string>
    <string name="grava_o" translatable="false">Gravador de Áudio</string>
    <string name="insira_o_t_tulo_do_udio" translatable="false">Insira o título do Áudio</string>
    <string name="exibir_udios_salvos_em_uma_lista" translatable="false">Exibir áudios salvos em uma lista</string>
    <string name="exibir_udios_salvos_no_google_maps" translatable="false">Exibir áudios salvos no Google Maps</string>
    <string name="gravar" translatable="false">Gravar</string>
    <string name="parar_e_salvar" translatable="false">Parar e Salvar</string>
    <string name="nenhum_dado_salvo" translatable="false">Nenhum dado salvo</string>
    <string name="deletar" translatable="false">Deletar</string>
    <string name="t_tulo" translatable="false">Título:</string>
    <string name="data_e_hora" translatable="false">Data e Hora:</string>
    <string name="latitude" translatable="false">Latitude:</string>
    <string name="longitude" translatable="false">Longitude:</string>
    <string name="alterar" translatable="false">Alterar</string>
    <string-array name="categoria_operacao">
        <item>+</item>
        <item>-</item>
        <item>*</item>
        <item>/</item>
    </string-array>
    <string name="title_activity_maps" translatable="false">Map</string>
</resources>
