<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="aula1Click"
        android:text="@string/aula_1" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="aula2Click"
        android:text="@string/aula_2" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="aula3Click"
        android:text="@string/aula_3" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="aula4Click"
        android:text="@string/aula_4" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aula_5"
        android:onClick="aula5Click"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="aula6Click"
        android:text="@string/aula_6" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="aula7Click"
        android:text="@string/aula_7" />

</LinearLayout>