<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d7d7d7"
    android:orientation="vertical"
    tools:context=".Main3_1Activity">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/poupanca_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_3_1_value"
        android:textColor="#000000"
        android:layout_marginLeft="20dp"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_3_1_valueEx"
        android:textColor="#444444"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_3_1_applic"
        android:textColor="#000000"
        android:layout_marginLeft="20dp"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_3_1_applicEx"
        android:textColor="#444444"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_3_1_time"
        android:textColor="#000000"
        android:layout_marginLeft="20dp"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_3_1_timeEx"
        android:textColor="#444444"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_3_1_tax"
        android:textColor="#000000"
        android:layout_marginLeft="20dp"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_3_1_taxEx"
        android:textColor="#444444"
        android:layout_marginLeft="20dp"/>

    <Button
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_3_1_calc"
        android:textColor="#1e1e1e"
        android:background="#126599"
        android:layout_marginLeft="20dp"/>
    //calculate color #126599 or #0469a8

</LinearLayout>