<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginHorizontal="5dp"
    android:layout_marginVertical="5dp"
    tools:context=".Main11_2ActivityCreate">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modelo"/>

            <EditText
                android:id="@+id/aula11_modeloAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ano"/>

        <EditText
            android:id="@+id/aula11_anoAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valor"/>

        <EditText
            android:id="@+id/aula11_valorAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <Button
        android:id="@+id/aula11_salvarBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="aula11CreateBtn"
        android:text="@string/salvar"/>

</LinearLayout>