<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fc6800"
    android:stretchColumns="*"
    android:isScrollContainer="true"
    tools:context=".Main3_4Activity">

    <TableRow
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/app_3_4_value"
            android:textSize="15sp" />
        <EditText
            android:background="#ffffff"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="30sp"/>
    </TableRow>

    <TableRow
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/app_3_4_couvert"
            android:textSize="15sp" />
        <EditText
            android:background="#ffffff"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="30sp"/>
    </TableRow>

    <TableRow
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/app_3_4_divide"
            android:textSize="15sp" />
        <EditText
            android:background="#ffffff"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="30sp"/>
    </TableRow>

    <TableRow
        android:layout_marginTop="6dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        >
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/app_3_4_calc"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:layout_weight="1"
            />
    </TableRow>

    <TableRow
        android:layout_marginTop="6dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/app_3_4_tax"
            android:textSize="15sp" />
        <EditText
            android:background="#ffffff"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="30sp"/>
    </TableRow>

    <TableRow
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/app_3_4_finalTotal"
            android:textSize="15sp" />
        <EditText
            android:background="#ffffff"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="30sp"/>
    </TableRow>

    <TableRow
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/app_3_4_finalPerson"
            android:textSize="15sp" />
        <EditText
            android:background="#ffffff"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="30sp"/>
    </TableRow>

    <TableRow
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:src="@drawable/logo_balaio"/>
    </TableRow>

</TableLayout>