<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginHorizontal="5dp"
    android:layout_marginVertical="5dp"
    tools:context=".Main11Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text = "@string/ano"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/aula11_ano"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/aula11_read"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="aula11ReadBtn"
            android:text="@string/aula_11buscar"/>
      </LinearLayout>
        <RelativeLayout android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <Button android:id="@+id/aula11_adicionarBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="aula11OpenCreateActivity"
                android:text="@string/aula_11adicionar"
                android:layout_alignParentBottom="true"/>

            <ListView
                android:id="@+id/aula11_list"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_above="@id/aula11_adicionarBtn" />
        </RelativeLayout>

</LinearLayout>